# boter

./: CMakeLists.txt  func.h  main.cpp
libs/botapi/: CMakeLists.txt
libs/botapi/header/: bot.h
libs/botapi/source/: bot.cpp
libs/data/: CMakeLists.txt  Item.h
libs/openssl/apps/: openssl
libs/openssl/crypto/: buildinf.h
libs/openssl/crypto/aes/: aes.h
libs/openssl/test/: .rnd  asn1test  bad_dtls_test  bftest  bntest  casttest  certCA.srl  certCA.ss  certP1.srl  certP1.ss  certP2.ss  certU.srl  certU.ss  clienthellotest  constant_time_test  destest  dhtest  dsatest  dtlstest  dummytest  ecdhtest  ecdsatest  ectest  enginetest  evp_extra_test  evp_test  exptest  fatalerrtest  heartbeat_test  hmactest  ideatest  igetest  intP1.ss  intP2.ss  jpaketest  keyCA.ss  keyP1.ss  keyP2.ss  keyU.ss  md2test  (+30 more)
